Return with an error from copy_link(), copy_fifo() and copy_special() if the -n option is specified and the destination file exists.

PR:		bin/174489
Approved by:	rstone (co-mentor)
MFC after:	2 weeks